--- a/app/assets/stylesheets/main/nav.scss
+++ b/app/assets/stylesheets/main/nav.scss
@@ -91,7 +91,7 @@
 
 .suggestion-item-link {
     text-decoration: none;
-    color: black;
+    color: var(--text-color);
 }
 
 .suggestion-item-link:hover {
